// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customfields shoulg match snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="name"
    >
      Дополнительные поля
      <button
        class="small button normal false basic"
        type="button"
      >
        <div>
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
              fill="#000"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`customfields shoulg match snapshot 2`] = `
<DocumentFragment>
  <div>
    <div
      class="name"
    >
      Дополнительные поля
      <button
        class="small button normal false basic"
        type="button"
      >
        <div>
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
              fill="#000"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="inline line"
    >
      <div
        class="half value"
      >
        child1Sex
      </div>
      <div
        class="half value"
      >
        <span
          class="neutral"
        >
          Пусто
        </span>
      </div>
    </div>
    <div
      class="inline line"
    >
      <div
        class="half value"
      >
        clearTestClient
      </div>
      <div
        class="half value"
      >
        <span
          class="neutral"
        >
          Пусто
        </span>
      </div>
    </div>
    <div
      class="inline line"
    >
      <div
        class="half value"
      >
        isCompany
      </div>
      <div
        class="half value"
      >
        true
      </div>
    </div>
    <div
      class="inline line"
    >
      <div
        class="half value"
      >
        multiline
      </div>
      <div
        class="half value"
      >
        <div>
          1
        </div>
        <div>
          2
        </div>
      </div>
    </div>
    <div
      class="inline line"
    >
      <div
        class="half value"
      >
        singleline
      </div>
      <div
        class="half value"
      >
        <div>
          56
        </div>
        <div>
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
    </div>
    <div
      class="inline line"
    >
      <div
        class="half value"
      >
        walletCardLink
      </div>
      <div
        class="half value"
      >
        <span
          class="neutral"
        >
          Пусто
        </span>
      </div>
    </div>
    <div
      class="inline line"
    >
      <div
        class="half value"
      >
        walletCardQrCodeLink
      </div>
      <div
        class="half value"
      >
        <span
          class="neutral"
        >
          Пусто
        </span>
      </div>
    </div>
    <div
      class="inline line"
    >
      <div
        class="half value"
      >
        walletCardSubscription
      </div>
      <div
        class="half value"
      >
        false
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`customfields shoulg match snapshot 3`] = `
<DocumentFragment>
  <div>
    <div
      class="name"
    >
      Дополнительные поля
      <button
        class="small button normal false basic"
        type="button"
      >
        <div>
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
              fill="#000"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
